[metadata]
name = tzdata
version = attr:tzdata.__version__
description = Provider of IANA time zone data
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
    LICENSE
    licenses/LICENSE_APACHE
url = https://github.com/python/tzdata
author = Python Software Foundation
author_email = paul@ganssle.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

python_requires = *.*  # This is a data-only package

project_urls =
    Bug Reports = https://github.com/python/tzdata/issues
    Source = https://github.com/python/tzdata

[options]
packages = tzdata
include_package_data=True
package_dir=
    =src

[bdist_wheel]
universal=1
