[metadata]
name = tzdata
version = attr:tzdata.__version__
description = Provider of IANA time zone data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python/tzdata
author = Python Software Foundation
author_email = paul@ganssle.io
license = Apache-2.0
license_file = LICENSE
license_files =
    LICENSE
    licenses/LICENSE_APACHE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
project_urls =
    Bug Reports = https://github.com/python/tzdata/issues
    Source = https://github.com/python/tzdata

[options]
packages = tzdata
python_requires = >=2
include_package_data = True
package_dir =
    =src

[bdist_wheel]
universal = 1
